--- a/shop/src/App.css
+++ b/shop/src/App.css
@@ -1,11 +1,13 @@
+.main-bg{
+  height: 1000px;
+  background-image: url(./img/오단추.HEIC);
+  background-size: cover;
+  background-position: center;
+}
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
